src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>CustomerID__c</fullName>
        <label>Customer ID</label>
        <type>Text</type>
        <length>5</length>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <label>Employee ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <type>Currency</type>
        <precision>16</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <label>Order ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>RequiredDate__c</fullName>
        <label>Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShipAddress__c</fullName>
        <label>Ship Address</label>
        <type>Text</type>
        <length>60</length>
    </fields>
    <fields>
        <fullName>ShipCity__c</fullName>
        <label>Ship City</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>ShipCountry__c</fullName>
        <label>Ship Country</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>ShipName__c</fullName>
        <label>Ship Name</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <label>Shipped Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShipPostalCode__c</fullName>
        <label>Ship Postal Code</label>
        <type>Text</type>
        <length>10</length>
    </fields>
    <fields>
        <fullName>ShipRegion__c</fullName>
        <label>Ship Region</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>ShipVia__c</fullName>
        <label>Ship Via</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <label>Order</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>